--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>de.hbt.power</groupId>
     <artifactId>pwr-skill-service</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.3</version>
     <packaging>jar</packaging>
 
     <name>pwr-skill-service</name>
@@ -95,6 +95,11 @@
             <version>1.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>2.9.8</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -123,6 +128,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -146,6 +152,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
