--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@ spring:
   application:
     name: pwr-skill-service
   datasource:
-    url: jdbc:mysql://localhost:3306/skill
-    username: skill
-    password: secret
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: ${DB_USER}
+    password: ${DB_PASS}
+    url: ${DB_URL}
+    driver-class-name: ${DB_DRIVER_CLASS_NAME}
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: ${DB_HIBERNATE_DDL_AUTO:none}
   http:
     encoding:
       charset: UTF-8
@@ -23,11 +23,16 @@ management:
         allowed-origins: '*'
         allowed-methods: '*'
       base-path: /meta
+eureka:
+  client:
+    enabled: ${EUREKA_ENABLED:false}
+    service-url:
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
 ---
 spring:
   profiles: bootstrapDatabase
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
     username: skill
     password: secret
     url: jdbc:mysql://localhost:3306/skill?useLegacyDatetimeCode=false&serverTimezone=UTC
