--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,60 +23,17 @@ management:
         allowed-origins: '*'
         allowed-methods: '*'
       base-path: /meta
-eureka:
-  client:
-    enabled: ${EUREKA_ENABLED:false}
-    service-url:
-      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka}
----
-spring:
-  profiles: bootstrapDatabase
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: skill
-    password: secret
-    url: jdbc:mysql://localhost:3306/skill?useLegacyDatetimeCode=false&serverTimezone=UTC
-  jpa:
-    hibernate:
-      ddl-auto: create
-eureka:
-  client:
-    enabled: false
 ---
 spring:
   profiles: localDev
   datasource:
-    username: skill
-    password: secret
+    username: root
+    password: changeit
+    driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mysql://localhost:3306/skill
   jpa:
     hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-logging:
-  config: ./logback.xml
-eureka:
-  client:
-    enabled: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
----
-spring:
-  profiles: localDevNoEureka
-  datasource:
-    username: skill
-    password: secret
-    url: jdbc:mysql://localhost:3306/skill?useLegacyDatetimeCode=false&serverTimezone=UTC
-  jpa:
-    hibernate:
       ddl-auto: update
-logging:
-  config: ./logback.xml
-eureka:
-  client:
-    enabled: false
 ---
 spring:
   profiles: test
@@ -94,6 +51,3 @@ spring:
             indexBase: ./target
     hibernate:
       ddl-auto: create
-eureka:
-  client:
-    enabled: false
